<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/colorLight"
                  android:gravity="center"
    android:id="@+id/linear_for_snackbar">
        <info.hoang8f.android.segmented.SegmentedGroup
                android:id="@+id/measure_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                app:sc_border_width="2dp"
                app:sc_corner_radius="10dp">

            <RadioButton
                    android:id="@+id/select_types_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/types_all"
                    style="@style/RadioButton"/>

            <RadioButton
                    android:id="@+id/select_types_eat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_measurement_eat"
                    style="@style/RadioButton"/>

            <RadioButton
                    android:id="@+id/select_types_insulin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_measurement_insulin"
                    style="@style/RadioButton"/>
            <RadioButton
                    android:id="@+id/select_types_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_measurement_device"
                    style="@style/RadioButton"/>
        </info.hoang8f.android.segmented.SegmentedGroup>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/cards_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    />

</LinearLayout>