<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".entrance_fragments.SignInFragment">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/some_rectangle_form"
            android:padding="10dp"
            android:id="@+id/email_input" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.39"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/some_rectangle_form"
            android:padding="10dp"
            android:ems="10"
            android:id="@+id/password_input" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/email_input" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/str_enter"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/some_rectangle_form"
            android:id="@+id/button_signin" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>