<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gggg"
        android:padding="20dp"
        tools:context=".AddMeasureActivity">
    <TextView
            android:text="Ввеите тип измерения"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="51dp"
            tools:layout_editor_absoluteX="99dp" android:id="@+id/textView1"/>

    <RadioGroup android:layout_width="match_parent"
                android:padding="10dp" android:layout_height="wrap_content" android:id="@+id/radio_buttons" android:orientation="horizontal" android:gravity="center" android:textColor="@color/colorPrimary">
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radio_button_eat" android:text="@string/type_measurement_eat" android:textColor="@color/colorPrimary"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radio_button_insulin" android:text="@string/type_measurement_insulin" android:textColor="@color/colorPrimary"/>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radio_button_device" android:text="@string/type_measurement_device" android:textColor="@color/colorPrimary"/>
    </RadioGroup>

    <!--<TextView-->
            <!--android:text="Ввеите название"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" tools:layout_editor_absoluteY="51dp"-->
            <!--tools:layout_editor_absoluteX="99dp" android:id="@+id/textView2"/>-->
    <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textPersonName"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:ems="10"-->
            <!--android:padding="10dp"-->
            <!--android:background="@drawable/some_rectangle_form"-->
            <!--android:id="@+id/measure_short"/>-->

    <TextView
            android:text="Введите описание/количество"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="188dp"
            tools:layout_editor_absoluteX="157dp" android:id="@+id/textView3"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textColor="@color/colorPrimary"
            android:gravity="start|top"
            android:padding="10dp"
            android:background="@drawable/some_rectangle_form"
            android:ems="10"
            android:id="@+id/measure_description"/>
    <Button
            android:text="Добавить"
            android:layout_gravity="right"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/some_rectangle_form"
            android:id="@+id/button_add_measure" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/measure_description"/>

</LinearLayout>